unsupported/static_h/external/esprima/test_fixtures/es2017/async/invalid-await/invalid-await-declaration4.js
x = { async f() { let await } }
